namespaces/live.cloud-platform.service.justice.gov.uk/hmpps-prisoner-finance-sync-preprod/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "hmpps-prisoner-finance-sync-preprod"
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "preprod"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/slack-channel: "hmpps-prisoner-finance"
    cloud-platform.justice.gov.uk/application: "hmpps-prisoner-finance-sync-api"
    cloud-platform.justice.gov.uk/owner: "Prisoner Finance: digital-prisoner-finance@justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/hmpps-prisoner-finance-sync-api,https://github.com/ministryofjustice/hmpps-prisoner-finance-sync-ui"
    cloud-platform.justice.gov.uk/team-name: "hmpps-prisoner-finance"
    cloud-platform.justice.gov.uk/review-after: ""
